# openspec-ui

./: --config  .gitignore  Dockerfile  LICENSE  PR_DESCRIPTION.md  README.md  build_n_run.sh  openspec-ui.example.json  openspec-ui.json  package-lock.json  package.json  test_docker.sh
.github/workflows/: ci-all.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
backend/: Cargo.toml
backend/src/: config.rs  config_manager.rs  main.rs  parser.rs
docs/: production-readiness.md  readme.md
example-openspec/: project.md
example-openspec/changes/add-abort-session/: proposal.md  tasks.md
example-openspec/changes/add-connection-status/: proposal.md  tasks.md
example-openspec/changes/add-delete-session/: proposal.md  tasks.md
example-openspec/changes/add-model-selection/: proposal.md  tasks.md
example-openspec/changes/add-session-rename/: proposal.md  tasks.md
example-openspec/changes/add-todo-list/: proposal.md  tasks.md
example-openspec/changes/add-tool-parts/: proposal.md  tasks.md
example-openspec/specs/chat/: spec.md
example-openspec/specs/configuration/: spec.md
example-openspec/specs/test-environment/: spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChangeCard.tsx  DetailModal.tsx  ErrorBoundary.tsx  Header.tsx  IdeaCapture.tsx  IdeaCard.tsx  IdeaDetailModal.tsx  IdeasView.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  LoadingSkeleton.tsx  SearchBar.tsx  SettingsModal.tsx  (+2 more)
openspec/: project.md
openspec/ideas/: idea-1767707900749.md
(+83 files in other folders)
