[package]
name = "openspec-ui"
version = "0.1.0"
edition = "2021"
authors = ["ToruGuy"]
repository = "https://github.com/ToruAI/openspec-ui"
license = "MIT"
description = "A read-only dashboard for monitoring OpenSpec changes and specifications across multiple repositories."

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-full = "0.3"
walkdir = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
futures = "0.3"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
anyhow = "1.0.100"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
